<resources>
    <string name="app_name">Network Stats Logger</string>
    <string name="menu_start_test">Start Test</string>
    <string name="menu_update_stats">Update Stats (UI only)</string>
    <string name="menu_update_stats_and_log">Update Stats and log</string>
    <string name="menu_stop_test">Stop Test</string>
    <string name="menu_request_permissions">Request Runtime Permissions</string>
    <string name="saved_start_time">start_time</string>
    <string name="saved_is_test_running">is_test_running</string>
    <string name="minimum_duration_error">Recommend running tests for at least 3 hours for reliable results</string>
</resources>
